--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0",
+    "deploy": "npm run build && wrangler pages deploy dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
@@ -26,7 +27,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "wrangler": "^4.35.0"
   },
   "keywords": [
     "react",
