--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,13 +1,7 @@
 name = "a-actions"
 compatibility_date = "2024-01-01"
+pages_build_output_dir = "dist"
 
 [build]
 command = "npm run build"
 cwd = "."
-
-[build.upload]
-format = "modules"
-main = "./dist/index.html"
-
-[[pages_build_output_dir]]
-dir = "dist"
