--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.0.0",
@@ -28,7 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "vite": "^7.1.3",
-    "wrangler": "^4.35.0"
+    "wrangler": "^4.38.0"
   },
   "keywords": [
     "react",
